# pg-db2-git-sync

./: .env.example  .gitignore  README.md  REQUIREMENTS_AND_ARCHITECTURE.md  pyproject.toml  requirements.txt  test_playground.py
pg_db2_git_sync/: __init__.py  cli.py  config.py  exceptions.py
pg_db2_git_sync/api/: __init__.py  db_apply.py  discover.py  git_ops.py  sql_loader.py
pg_db2_git_sync/core/: __init__.py  git.py  repo.py  validation.py
tests/: __init__.py  test_import.py
